# 202Assignments_OpenGL

./: CMakeLists.txt
include/: lightCube.h  mesh.h  model.h  myMesh.h  myModel.h  timer.h
include/assimp/: revision.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/camera/: camera.h
src/scene/: floor.h  lightCube.h  mesh.h  model.h  scene.cpp  scene.h
src/shaders/: assignment0.frag  assignment0.vert  floor.frag  shader_m.h
src/shaders/assignment0/: assignment0.frag  assignment0.vert  debugDepthQuad.frag  lightCube.frag  shadow.frag
src/shadow/: shadow.cpp  shadow.h
